# sbu-cse328-hw2

./: CMakeLists.txt  README.md
assets/shaders/: basic.frag  basic.vert  circle.tesc  circle.tese  circle.vert  element.frag  element.geom  identity.vert  mouth.tesc  mouth.tese
etc/: config.txt
include/: util.h
include/app/: app.h  renderer.h  simulation.h
include/app/3d/: renderer.h  scene.h  simulation.h
include/app/default/: renderer.h  scene.h  simulation.h
include/app/extra/: renderer.h  renderer.h.bak  scene.h  scene.h.bak  simulation.h
include/gl/: gl_object.h  glsl_object.h  texture.h  uniform.h  vertex_layout.h
include/gl/component/: fragment.h  geometry.h  tessellation.h  uniform_macros.h  vertex.h
include/input/: input_handler.h  key.h
src/: callback.cpp  main.cpp  util.cpp
src/app/: app.cpp  renderer.cpp  simulation.cpp
src/app/3d/: renderer.cpp  scene.cpp  simulation.cpp
src/app/default/: renderer.cpp  scene.cpp  simulation.cpp
src/app/extra/: renderer.cpp  renderer.cpp.bak  scene.cpp  scene.cpp.bak  simulation.cpp  simulation.cpp.bak
src/gl/: texture.cpp  vertex_layout.cpp
src/input/: input_handler.cpp
